--- a/history.html
+++ b/history.html
@@ -1,5 +1,5 @@
-﻿<!DOCTYPE html>
-<html lang="en">
+<!DOCTYPE html>
+<html lang="en" data-theme="dark">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -7,59 +7,137 @@
 
   <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+  <!-- Icons -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css"/>
   <!-- Chart.js -->
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 
   <style>
-    body { background-color:#111; color:#fff; font-family:'Segoe UI', sans-serif; margin:0; padding:0; }
-    .card { background:#1a1a1a; border:none; border-radius:12px; padding:18px; margin-bottom:20px; color:#fff; }
-    h2 { font-size:28px; font-weight:bold; }
-    h6 { font-size:16px; margin-bottom:12px; }
-    .chart-container { background:#1a1a1a; border-radius:12px; padding:18px; margin-bottom:20px; height:350px; }
-    .chart-container canvas { height:100% !important; }
-    table { color:#fff; font-size:14px; }
-    table thead th { border-bottom:1px solid #444; white-space:nowrap; }
-    table tbody tr td { border-top:1px solid #333; white-space:nowrap; }
-    .table-responsive { overflow-x:auto; }
+    /* THEME TOKENS */
+    :root{
+      --bg:#111; --text:#fff; --card:#1a1a1a; --muted:rgba(255,255,255,.75);
+      --border:#333; --grid:#333; --btn:#1a1a1a; --btn-active:#2d2d2d;
+      --table-head-border:#444; --chart-bar:#1abc9c;
+      --pill-bg:#1b1b1b; --pill-text:#eaeaea; --pill-active:#2d2d2d; --pill-border:#2a2a2a;
+      --gap:16px; /* breathing space above bottom nav */
+    }
+    html[data-theme="light"]{
+      --bg:#f7f7f7; --text:#111; --card:#fff; --muted:rgba(0,0,0,.65);
+      --border:#e5e5e5; --grid:#e5e5e5; --btn:#fff; --btn-active:#eef1f5;
+      --table-head-border:#e0e0e0; --chart-bar:#0ea5e9;
+      --pill-bg:#ffffff; --pill-text:#222; --pill-active:#eef1f5; --pill-border:#e5e7eb;
+    }
 
-    /* Bottom Nav equal buttons */
-    .bottom-nav { position:fixed; bottom:15px; left:0; width:100%; display:flex; justify-content:space-between; padding:0 20px; }
-    .bottom-nav .btn { flex:1; margin:0 5px; background:#1a1a1a; border:none; color:#fff !important; font-size:1rem; font-weight:600; border-radius:6px; padding:10px 0; }
-    .active-btn { background:#2d2d2d !important; }
-    .dim { opacity:.85; }
+    /* Lock page to viewport; no page scroll */
+    html, body { height:100%; }
+    body{
+      background:var(--bg); color:var(--text); font-family:'Segoe UI',sans-serif;
+      margin:0; height:100vh; overflow:hidden;
+      /* no bottom padding now—we handle spacing with JS sizing */
+    }
+    .container-fluid{ height:100%; }
+
+    .card{ background:var(--card); border:1px solid var(--border); border-radius:12px; padding:18px; margin-bottom:20px; color:var(--text); }
+    h2{ font-size:28px; font-weight:700; } .dim{ color:var(--muted); }
+
+    /* Topbar */
+    .topbar{ display:flex; align-items:center; justify-content:space-between; gap:12px; }
+    .nav-buttons{ display:flex; gap:8px; }
+    .scope-pill{
+      display:inline-flex; align-items:center; gap:6px;
+      background:var(--pill-bg); color:var(--pill-text);
+      border:1px solid var(--pill-border);
+      border-radius:999px; padding:8px 12px; font-weight:600; cursor:pointer;
+      user-select:none; transition:.15s ease;
+    }
+    .scope-pill:hover{ transform:translateY(-1px); }
+    .scope-pill.active{ background:var(--pill-active); }
+    .theme-toggle{
+      display:inline-flex; align-items:center; gap:8px;
+      border:1px solid var(--border); background:var(--btn); color:var(--text);
+      border-radius:10px; padding:8px 12px; font-weight:600; cursor:pointer;
+    }
+
+    /* Chart container: height set dynamically by JS; provide a safe fallback */
+    .chart-container{
+      background:var(--card); border:1px solid var(--border);
+      border-radius:12px; padding:18px; margin:16px 0 16px;
+      height:50vh; /* fallback only */
+    }
+    .chart-container canvas{ height:100% !important; }
+
+    /* Table (scrolls inside itself; height set dynamically by JS) */
+    .table-wrap{ overflow:auto; border-radius:12px; max-height:40vh; } /* fallback */
+    table{ color:var(--text); font-size:12px; }
+    thead th{ position:sticky; top:0; background:var(--card); border-bottom:1px solid var(--table-head-border); white-space:nowrap; z-index:1; }
+    tbody td{ border-top:1px solid var(--border); white-space:nowrap; }
+    .table td,.table th{ padding:6px 8px; }
+
+    /* Bottom nav */
+    .bottom-nav{
+      position:fixed; left:0; bottom:12px; width:100%;
+      display:flex; gap:10px; padding:0 20px; z-index:10;
+    }
+    .bottom-nav .btn{
+      flex:1; background:var(--btn); border:1px solid var(--border);
+      color:var(--text)!important; font-weight:600; border-radius:8px; padding:12px 0;
+    }
+    .active-btn{ background:var(--btn-active)!important; }
+
+    /* Responsive */
+    @media (max-width: 768px){
+      .topbar{ flex-direction:column; align-items:flex-start; }
+      .nav-buttons{ flex-wrap:wrap; }
+    }
   </style>
 </head>
 <body>
 
-<div class="container-fluid p-3">
+<div class="container-fluid p-3" id="pageRoot">
 
-  <!-- Title -->
-  <h2 id="title">History — North America / Los Angeles</h2>
-  <p class="dim">AQI (last 30 days)</p>
+  <!-- Top bar: scopes + theme toggle -->
+  <div class="topbar mb-2" id="topbar">
+    <div class="d-flex flex-wrap nav-buttons" id="scopeBar">
+      <span class="scope-pill active" data-region="north_america" data-city="california">North America · California</span>
+      <span class="scope-pill" data-region="north_america" data-city="san_francisco">North America · San Francisco</span>
+      <span class="scope-pill" data-region="north_america" data-city="new_york">North America · New York</span>
+    </div>
 
-  <div class="row">
-    <!-- Left (Chart) -->
-    <div class="col-md-8">
-      <div class="chart-container">
+    <button id="themeToggle" class="theme-toggle" type="button" title="Toggle theme">
+      <i class="fa-solid fa-circle-half-stroke"></i> <span id="themeLabel">Light</span>
+    </button>
+  </div>
+
+  <!-- Page title -->
+  <div class="d-flex justify-content-between align-items-center mb-1" id="titleRow">
+    <h2 id="title" class="mb-0">History — north america / california</h2>
+  </div>
+  <p class="dim" id="subtitle">AQI (last 30 days)</p>
+
+  <div class="row g-3" id="contentRow">
+    <!-- Chart -->
+    <div class="col-md-8 col-lg-9">
+      <div class="chart-container" id="chartWrap">
         <canvas id="historyChart" aria-label="Last 30 days AQI"></canvas>
       </div>
     </div>
 
-    <!-- Right (Cards + Table) -->
-    <div class="col-md-4">
-      <div class="card">
-        <h6>Data Provenance</h6>
-        <p id="provLines">TEMPO • OpenAQ • Weather</p>
+    <!-- Cards + Table -->
+    <div class="col-md-4 col-lg-3">
+      <div class="card" id="provCard">
+        <h6 class="mb-1">Data Provenance</h6>
+        <p id="provLines" class="mb-1">TEMPO • OpenAQ • Weather</p>
         <small id="provTs" class="dim">Last updated —</small>
       </div>
-      <div class="card table-responsive">
-        <table class="table table-dark table-sm mb-0">
+
+      <div class="card table-wrap" id="tableWrap">
+        <table class="table mb-0" id="historyTable">
           <thead>
             <tr>
               <th>Date</th>
-              <th>AQI</th>
-              <th>PM₂.₅</th>
-              <th>O₃</th>
+              <th class="text-end">AQI</th>
+              <th class="text-end">PM₂.₅</th>
+              <th class="text-end">O₃</th>
             </tr>
           </thead>
           <tbody id="tbody">
@@ -73,7 +151,7 @@
 </div>
 
 <!-- Bottom Nav -->
-<div class="bottom-nav">
+<div class="bottom-nav" id="bottomNav">
   <a class="btn" href="/index.html">Forecast</a>
   <a class="btn" href="/validate.html">Validate</a>
   <a class="btn" href="/map.html">Map</a>
@@ -81,117 +159,118 @@
 </div>
 
 <script>
-const API_BASE = "http://localhost:8000";
-const DEFAULT_REGION = "north_america";
-const DEFAULT_CITY = "los_angeles";
+/* ---------- CONFIG ---------- */
+const API_BASE="http://localhost:8000";
+let currentRegion="north_america";
+let currentCity="california";
+let chartInstance=null;
 
-// Chart holder
-let chartInstance = null;
-
-// Small helpers
-function toDateLabel(iso){ try { return new Date(iso).toISOString().slice(0,10); } catch { return iso; } }
-function cleanNum(x){ return (x===null || x===undefined || Number.isNaN(x)) ? null : Number(x); }
-
-// Build fallback last-30-days series
-function makeFallbackSeries(){
-  const today = new Date();
-  const dates = [];
-  const aqi = []; const pm25=[]; const o3=[];
-  for(let i=29;i>=0;i--){
-    const d = new Date(today); d.setDate(today.getDate()-i);
-    dates.push(d.toISOString().slice(0,10));
-    // simple synthetic curve
-    const base = 60 + Math.round(20*Math.sin((i/30)*Math.PI*2));
-    aqi.push(base);
-    pm25.push(Math.max(5, Math.round(base*0.25)));
-    o3.push(Math.max(5, Math.round(base*0.4)));
+/* ---------- THEME ---------- */
+function sysTheme(){ return window.matchMedia && window.matchMedia('(prefers-color-scheme: light)').matches ? 'light' : 'dark'; }
+function savedTheme(){ return localStorage.getItem('aq_theme'); }
+function cssVar(n){ return getComputedStyle(document.documentElement).getPropertyValue(n).trim(); }
+function themeStyles(){ return { text:cssVar('--text')||'#fff', grid:cssVar('--grid')||'#333', bar:cssVar('--chart-bar')||'#1abc9c' }; }
+function applyTheme(t){
+  document.documentElement.setAttribute('data-theme', t);
+  const lbl=document.getElementById('themeLabel');
+  lbl.textContent = (t==='light' ? 'Dark' : 'Light'); // indicates next action
+  if(chartInstance){
+    const s=themeStyles();
+    chartInstance.data.datasets[0].backgroundColor=s.bar;
+    chartInstance.options.scales.x.ticks.color=s.text; chartInstance.options.scales.x.grid.color=s.grid;
+    chartInstance.options.scales.y.ticks.color=s.text; chartInstance.options.scales.y.grid.color=s.grid;
+    chartInstance.update();
   }
-  return {dates, aqi, pm25, o3, ts: new Date().toISOString(), provenance:{tempo:true, openaq:true, weather:true}};
+  fitPanels(); // theme may change font sizes -> recalc
+}
+function initTheme(){
+  const t=savedTheme()||sysTheme();
+  applyTheme(t);
+}
+document.getElementById('themeToggle').addEventListener('click', ()=>{
+  const cur=document.documentElement.getAttribute('data-theme')||'dark';
+  const nxt=cur==='dark'?'light':'dark';
+  localStorage.setItem('aq_theme',nxt);
+  applyTheme(nxt);
+});
+
+/* ---------- HELPERS ---------- */
+function toDateLabel(iso){ try{ return new Date(iso).toISOString().slice(0,10); }catch{ return iso; } }
+function cleanNum(x){ return (x==null || Number.isNaN(x)) ? null : Number(x); }
+
+/* ---------- FALLBACK SERIES ---------- */
+function makeFallbackSeries(){
+  const today=new Date(); const dates=[], aqi=[], pm25=[], o3=[];
+  for(let i=29;i>=0;i--){
+    const d=new Date(today); d.setDate(today.getDate()-i);
+    dates.push(d.toISOString().slice(0,10));
+    const base=60+Math.round(20*Math.sin((i/30)*Math.PI*2));
+    aqi.push(base); pm25.push(Math.max(5, Math.round(base*0.25))); o3.push(Math.max(5, Math.round(base*0.4)));
+  }
+  return {dates, aqi, pm25, o3, ts:new Date().toISOString(), provenance:{tempo:true, openaq:true, weather:true}};
 }
 
-// Render bar chart
+/* ---------- CHART RENDER ---------- */
 function renderChart(labels, values){
-  const ctx = document.getElementById('historyChart').getContext('2d');
-  if (chartInstance) chartInstance.destroy();
-  chartInstance = new Chart(ctx, {
-    type: 'bar',
-    data: {
-      labels,
-      datasets: [{
-        label: 'AQI',
-        data: values,
-        backgroundColor: '#1abc9c'
-      }]
-    },
-    options: {
-      responsive: true,
-      maintainAspectRatio: false,
-      plugins: { legend: { display: false } },
-      scales: {
-        x: { ticks: { color: 'white' }, grid: { color: '#333' } },
-        y: { ticks: { color: 'white' }, grid: { color: '#333' }, suggestedMax: 150 }
+  const ctx=document.getElementById('historyChart').getContext('2d');
+  if(chartInstance) chartInstance.destroy();
+  const s=themeStyles();
+  chartInstance=new Chart(ctx,{
+    type:'bar',
+    data:{ labels, datasets:[{
+      label:'AQI',
+      data:values,
+      backgroundColor:s.bar,
+      categoryPercentage:0.9,
+      barPercentage:0.9
+    }] },
+    options:{
+      responsive:true, maintainAspectRatio:false,
+      plugins:{ legend:{ display:false } },
+      scales:{
+        x:{ ticks:{ color:s.text }, grid:{ color:s.grid } },
+        y:{ ticks:{ color:s.text }, grid:{ color:s.grid }, suggestedMax:160 }
       }
     }
   });
 }
 
-// Fill table rows
+/* ---------- TABLE FILL ---------- */
 function fillTable(dates, aqi, pm25, o3){
-  const tb = document.getElementById('tbody');
-  tb.innerHTML = "";
-  for(let i=dates.length-1;i>=0;i--){ // newest first
-    const tr = document.createElement('tr');
+  const tb=document.getElementById('tbody'); tb.innerHTML="";
+  for(let i=dates.length-1;i>=0;i--){
+    const tr=document.createElement('tr');
     tr.innerHTML = `
       <td>${toDateLabel(dates[i])}</td>
-      <td>${aqi[i] ?? "—"}</td>
-      <td>${pm25[i] ?? "—"}</td>
-      <td>${o3[i] ?? "—"}</td>
+      <td class="text-end">${aqi[i] ?? "—"}</td>
+      <td class="text-end">${pm25[i] ?? "—"}</td>
+      <td class="text-end">${o3[i] ?? "—"}</td>
     `;
     tb.appendChild(tr);
   }
 }
 
-// Try multiple API shapes safely
-function parseHistoryPayload(payload){
-  // Preferred shape:
-  // { series: { dates:[..], aqi:[..], pm25:[..], o3:[..] }, ts, provenance }
-  if (payload && payload.series && Array.isArray(payload.series.dates)){
-    const s = payload.series;
-    return {
-      dates: s.dates.map(toDateLabel),
-      aqi: (s.aqi || []).map(cleanNum),
-      pm25: (s.pm25 || []).map(cleanNum),
-      o3: (s.o3 || []).map(cleanNum),
-      ts: payload.ts,
-      provenance: payload.provenance || {}
-    };
+/* ---------- FLEXIBLE PARSER ---------- */
+function parseHistoryPayload(p){
+  if(p && p.series && Array.isArray(p.series.dates)){
+    const s=p.series;
+    return { dates:s.dates.map(toDateLabel), aqi:(s.aqi||[]).map(cleanNum), pm25:(s.pm25||[]).map(cleanNum), o3:(s.o3||[]).map(cleanNum), ts:p.ts, provenance:p.provenance||{} };
   }
-  // Alternate shape:
-  // { history: [ {date:'YYYY-MM-DD', aqi, pm25, o3}, ... ] }
-  if (payload && Array.isArray(payload.history)){
-    const dates = [], aqi=[], pm25=[], o3=[];
-    payload.history.forEach(r=>{
-      dates.push(toDateLabel(r.date));
-      aqi.push(cleanNum(r.aqi));
-      pm25.push(cleanNum(r.pm25));
-      o3.push(cleanNum(r.o3));
-    });
-    return {dates, aqi, pm25, o3, ts: payload.ts, provenance: payload.provenance || {}};
+  if(p && Array.isArray(p.history)){
+    const dates=[], aqi=[], pm25=[], o3=[];
+    p.history.forEach(r=>{ dates.push(toDateLabel(r.date)); aqi.push(cleanNum(r.aqi)); pm25.push(cleanNum(r.pm25)); o3.push(cleanNum(r.o3)); });
+    return { dates, aqi, pm25, o3, ts:p.ts, provenance:p.provenance||{} };
   }
   return null;
 }
 
-// Fetch history (30 days) with graceful fallback
+/* ---------- FETCH WITH FALLBACK ---------- */
 async function fetchHistory(region, city){
-  const url = `${API_BASE}/api/history?region=${encodeURIComponent(region)}&city=${encodeURIComponent(city)}&days=30`;
+  const url=`${API_BASE}/api/history?region=${encodeURIComponent(region)}&city=${encodeURIComponent(city)}&days=30`;
   try{
-    const r = await fetch(url);
-    if(!r.ok) throw new Error(`HTTP ${r.status}`);
-    const payload = await r.json();
-    const parsed = parseHistoryPayload(payload);
-    if (parsed && parsed.dates && parsed.dates.length){
-      return parsed;
-    }
+    const r=await fetch(url); if(!r.ok) throw new Error(`HTTP ${r.status}`);
+    const payload=await r.json(); const parsed=parseHistoryPayload(payload);
+    if(parsed && parsed.dates && parsed.dates.length) return parsed;
     throw new Error("Bad shape");
   }catch(err){
     console.warn("History API failed, using fallback:", err);
@@ -199,21 +278,71 @@ async function fetchHistory(region, city){
   }
 }
 
-// Boot
-document.addEventListener('DOMContentLoaded', async ()=>{
-  const region = DEFAULT_REGION;
-  const city = DEFAULT_CITY;
-
-  // Title
+/* ---------- SCOPE PILL HANDLERS ---------- */
+function setActiveScope(el){
+  document.querySelectorAll('.scope-pill').forEach(p=>p.classList.remove('active'));
+  el.classList.add('active');
+}
+async function changeScope(region, city){
+  currentRegion = region;
+  currentCity = city;
   document.getElementById('title').textContent = `History — ${region.replace('_',' ')} / ${city.replace('_',' ')}`;
-
-  // Fetch + render
   const hist = await fetchHistory(region, city);
   document.getElementById('provTs').textContent = `Last updated ${hist.ts ? new Date(hist.ts).toLocaleString() : '—'}`;
   renderChart(hist.dates, hist.aqi);
   fillTable(hist.dates, hist.aqi, hist.pm25, hist.o3);
+  applyTheme(document.documentElement.getAttribute('data-theme') || 'dark');
+  fitPanels(); // recompute sizes after content change
+}
+
+/* ---------- LAYOUT AUTOFIT (chart + table inside 100vh) ---------- */
+function fitPanels(){
+  const chartWrap = document.getElementById('chartWrap');
+  const tableWrap = document.getElementById('tableWrap');
+  const bottomNav = document.getElementById('bottomNav');
+  if(!chartWrap || !tableWrap || !bottomNav) return;
+
+  const gap = 16; // px gap above nav
+
+  // viewport height
+  const vh = window.innerHeight;
+
+  // bottom nav top position in viewport
+  const navTop = bottomNav.getBoundingClientRect().top;
+
+  // compute dynamic height for chart
+  const chartTop = chartWrap.getBoundingClientRect().top;
+  const chartAvailable = Math.max(240, navTop - chartTop - gap);
+  chartWrap.style.height = chartAvailable + 'px';
+
+  // compute dynamic height for table
+  const tableTop = tableWrap.getBoundingClientRect().top;
+  const tableAvailable = Math.max(180, navTop - tableTop - gap);
+  tableWrap.style.maxHeight = tableAvailable + 'px';
+}
+
+window.addEventListener('resize', fitPanels);
+
+/* ---------- BOOT ---------- */
+document.addEventListener('DOMContentLoaded', async ()=>{
+  initTheme();
+
+  // Scope clicks
+  document.getElementById('scopeBar').addEventListener('click', async (e)=>{
+    const pill = e.target.closest('.scope-pill');
+    if(!pill) return;
+    setActiveScope(pill);
+    const region = pill.getAttribute('data-region');
+    const city = pill.getAttribute('data-city');
+    await changeScope(region, city);
+  });
+
+  // Initial load
+  await changeScope(currentRegion, currentCity);
+
+  // First layout pass (after content is in)
+  fitPanels();
 });
 </script>
-
 </body>
 </html>
